syntax = "proto3";
/**package com.fiberhome.fums.proto;*/
package proto;
option java_package = "com.fiberhome.fums.proto";   
option java_outer_classname = "HeartProto";

message HeartData
{
	int64   uniqueId         = 1;
	string  msg              = 2;
	enum  HeartType
	{
		AGENT      = 0;
		FUMS       = 1;
	}
	HeartType   heartType   = 3;
}
